initial webpage started to be set up and will connect other pages

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
     <title>Shaheer Ahmed</title>
 </head>
 <body>
-    <h2>Shaheer Ahmed</h2>
-    <div class="bullet">
-        <div class="AboutMe">About Me</div>
-        <div class="Work">Work</div>
-        <div class="Contact">Contact</div>
-    </div>
-    <div class="canvas">
+    <h3>Shaheer Ahmed</h3>
+    <div class="container">
+        <div class="self">self</div>
+        <div class="aboutMe">About Me</div>
+        <div class="featuredWork">Featured Work</div>
+        <div class="reachOut" style="cursor:pointer" onclick="document.location='contact.html'">Reach out</div>
 
     </div>
+<!--    <footer>-->
+<!--        <a href="https://github.com/sahmed7" target="_blank">My GitHub</a>-->
+<!--        <a href="sahmed@3721@gmail.com">Email me</a>-->
+<!--        Phone: 773-317-2000-->
+<!--        <a>Resume</a>-->
+<!--    </footer>-->
 
 </body>
 </html>
