added work and contact functionality

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h3>Shaheer Ahmed</h3>
     <div class="container">
-        <div class="self">self</div>
+        <div class="self"></div>
         <div class="aboutMe">About Me</div>
-        <div class="featuredWork">Featured Work</div>
+        <div class="featuredWork" style="cursor:pointer" onclick="document.location='work.html'">Featured Work</div>
         <div class="reachOut" style="cursor:pointer" onclick="document.location='contact.html'">Reach out</div>
 
     </div>
