--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>Shaheer Ahmed</h3>
     <div class="container">
         <div class="self"></div>
-        <div class="aboutMe">About Me</div>
+        <div class="aboutMe" style="cursor:pointer" onclick="document.location='aboutMe.html'">About Me</div>
         <div class="featuredWork" style="cursor:pointer" onclick="document.location='work.html'">Featured Work</div>
         <div class="reachOut" style="cursor:pointer" onclick="document.location='contact.html'">Reach out</div>
 
