--- a/work.html
+++ b/work.html
@@ -6,19 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Reach me here!</title>
+    <title>Quality Work!</title>
 </head>
 <body>
-        <a href="index.html">Back</a>
+<a href="index.html">Back</a>
 
-        <h3>Check out what I've been up to!</h3>
+<h3>Check out what I've been up to!</h3>
 
-        <div class = "flexWork">
-            <div class = "haikuImage"></div>
-            <div class = "haikuInfo">This is a Haiku about one of my favorite games - Bioshock! This was
-            developed with HTML5 and CSS. In addition, this was created within a repository that was
-            pushed up via git commands in the CLI!</div>
-        </div>
+<div class = "flexWork">
+    <div class = "haikuImage"></div>
+    <div class = "haikuInfo">This is a Haiku about one of my favorite games - Bioshock! This was
+        developed with HTML5 and CSS. In addition, this was created within a repository that was
+        pushed up via git commands in the CLI!</div>
+</div>
 
 
 </body>
